# android-sdk-linux-arm64

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  PLAN.md  README.md  build.py  get_source.py  setup.sh  versions.json
.github/workflows/: build.yml  ci.yml
build-tools/: CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  dexdump.cmake  split-select.cmake  zipalign.cmake
lib/: CMakeLists.txt  libabsl.cmake  libandroidfw.cmake  libbase.cmake  libbuildversion.cmake  libcutils.cmake  libdiagnoseusb.cmake  libincfs.cmake  liblog.cmake  libmdnssd.cmake  libopenscreen.cmake  libpackagelistparser.cmake  libprocessgroup.cmake  libprotoc.cmake  libselinux.cmake  libsepol.cmake  libsparse.cmake  libusb.cmake  libutils.cmake  libziparchive.cmake
others/: CMakeLists.txt  veridex.cmake
patches/: adb.patch  art.patch  build.patch  libbase.patch
patches/base/: aidl.patch  base.patch  core.patch  incremental_delivery.patch  logging.patch  openscreen.patch
patches/base/misc/: dex_operator_out.cc  protobuf_config.h
platform-tools/: CMakeLists.txt  adb.cmake  e2fsprogs.cmake  etc1tool.cmake  f2fs-tools.cmake  fastboot.cmake  hprof-conv.cmake  sqlite3.cmake
